--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/react": "^11.13.5",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.4.0",
@@ -22,7 +26,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "tinymce": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
